Add ByRef to processor, process structs as value types and pointers as ref types, create tests in processor module