@@ -17,6 +17,9 @@ dependencies {
     implementation(libs.kotlin.logging)
     implementation(libs.tinylog.slf4j)
     implementation(libs.tinylog.impl)
+
+    kspTest(projects.processors)
+    testImplementation(kotlin("test"))
 }
 
 publishing {
@@ -25,4 +28,8 @@ publishing {
             from(components["java"])
         }
     }
+}
+
+tasks.test {
+    jvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
